# Masgent

./: .gitignore  MEMO.md  POSCAR  README.md  README_PyPI.md  pyproject.toml  sqs.vasp
examples/0. AI Agent Demo/: POSCAR  conversation_history.txt
examples/0. AI Agent Demo/defects/vacancies/: POSCAR
examples/0. AI Agent Demo/mlps_simulation/CHGNet/single/: CONTCAR
src/masgent/: cli.py  ml.py  schemas.py  tools.py  utils.py
src/masgent/ai_mode/: ai_backend.py  backend.py  schemas.py  system_prompt.txt  tools.py
src/masgent/cli_mode/: cli_backend.py  cli_entries.py  cli_run.py  functions.py
src/masgent/utils/: interface_maker.py  tools.py  utils.py
src/vasp_agent/: cli.py  hello_world.py  utils.py
src/vasp_agent/ai/: ai_backend.py
src/vasp_agent/ai_mode/: ai_backend.py  ai_tools.py
src/vasp_agent/cli_mode/: cli_backend.py
vasp_inputs/: INCAR  KPOINTS  POSCAR
