[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-agent"
version = "0.1.1"
description = "An AI-assisted VASP calculation and data analysis framework"
readme = "README.md"
authors = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "ase>=3.24.0",
    "numpy>=1.26.4",
    "pydantic_ai>=0.8.1",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "build", "twine"]
docs = ["mkdocs", "mkdocs-material"]

[project.scripts]
vasp-agent = "vasp_agent.cli:main"
